4_ingress/service-nginx.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-articles
  labels:
    app: mysql
spec:
  ports:
  - port: 80
    name: nginx
  clusterIP: None
  selector:
    app: mysql
