4_ingress/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: article-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-articles
                port:
                  number: 80
